# rust_lims_backend

./: .env  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2025-01-29-152730_create_samples/: down.sql  up.sql
migrations/2025-01-30-093549_create_users/: up.sql
migrations/2025-01-30-113742_create_samples/: down.sql  up.sql
migrations/2025-01-30-113754_create_users/: up.sql
src/: auth.rs  hash_password.rs  main.rs  models.rs  schema.rs  secret_key.rs
