[package]
name = "rust_lims_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "8.2"
bcrypt = "0.14"
actix-session = { version = "0.7", features = ["cookie-session"] }
diesel_migrations = "2.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
